Feat: Created Etch-A-Sketch Structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Etch A Sketch</title>
 </head>
 <body>
-    <div class="container"></div>
+    <header>
+        <div class="buttons">
+            <p>Current Size: <span class="dimSize"></span></p>
+            <button class="btn">Change Grid</button>
+        </div>
+        <div class="modes">
+            <p>Mode:</p>
+            <button class="color">Multiple Color</button>
+            <button class="transparency">Increasing Opacity</button>
+            <button class="both">Both Features</button>
+        </div>
+    </header>
     <script src="script.js"></script>
 </body>
 </html>
